# AI-Memory-Graph

./: .env.example  .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: pages.yml
ai-engine-python/: Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml
ai-engine-python/embeddings/: __init__.py  model.py
ai-engine-python/langgraph_workflows/: __init__.py
ai-engine-python/rca_engine/: __init__.py  generator.py
ai-engine-python/retrieval/: __init__.py  graph_repository.py  incident_memory.py
ai-engine-python/tests/: test_memory.py  test_rca.py
backend-java/api-gateway/: build.gradle
backend-java/api-gateway/src/main/resources/: application.yml  schema.sql
backend-java/common-lib/: build.gradle
backend-java/telemetry-service/: build.gradle
backend-java/telemetry-service/src/main/resources/: application.yml
backend-java/workflow-runtime/: build.gradle
docs/: api.md  architecture.md  roadmap.md  telemetry.md
frontend/dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/dashboard/src/: config.ts  main.tsx  styles.css
gradle/wrapper/: gradle-wrapper.properties
infra/docker/: Caddyfile  Dockerfile.api-gateway  Dockerfile.telemetry-service  docker-compose.prod.yml  docker-compose.yml
infra/helm/: README.md
infra/k6/: synthetic-incidents.js
infra/kubernetes/: ai-engine.yaml  api-gateway.yaml  otel-collector.yaml  telemetry-service.yaml
infra/otel/: otel-collector-config.yaml
infra/prometheus/: prometheus.yml
(+39 files in other folders)
