[project]
name = "aegis-ai-engine"
version = "0.1.0"
description = "AEGIS AI workflow, embedding, retrieval, graph, and RCA engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "sentence-transformers>=3.0.0",
    "opensearch-py>=2.7.0",
    "neo4j>=5.25.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
